Moved less file up to root of the respective page directory and removed respective css folder. Removed cssmin from package install. Fixed the global font variable. Added source and destination to the grunt less config. Fixed spacing and newline at end of file issue

--- a/client/less/variables.less
+++ b/client/less/variables.less
@@ -1,8 +1,6 @@
 /*Fonts*/
-@global-header-font: 'Oswald';
-@global-header-font-url: '/public/fonts/oswald/Oswald-Bold.ttf';
-@global-main-font: 'Muli';
-@global-main-font-url: '/public/fonts/muli/Muli.ttf';
+@global-header-font: 'Oswald', sans-serif;
+@global-main-font: 'Muli', sans-serif;
 
 /*Background Colors*/
 @bottom-theme-bg-color: #212121;
@@ -30,4 +28,3 @@
 
 /*Borders*/
 @list-item-border-color: 5px solid red;
-
